# src/infra/route/index.js
@@ -3,6 +3,7 @@ import authenticationMiddeware from '../../main/authentication/web/authenticatio
 import signController from '../../main/authentication/web/sign.controller';
 import addFarmerToSystemController from '../../main/farmer/web/add-farmer-to-system.controller';
 import showFarmerInformationLoggedController from '../../main/farmer/web/show-farmer-information-logged.controller';
+import addFarmToSystemController from '../../main/farm/web/add-farm-to-system.use-case';
 
 const route = Router();
 
@@ -11,5 +12,7 @@ route.post('/auth/sign', signController);
 
 route.post('/farmer', addFarmerToSystemController);
 route.get('/farmer', authenticationMiddeware, showFarmerInformationLoggedController);
+
+route.post('/farm', authenticationMiddeware, addFarmToSystemController);
 
 export default route;
