# swagger.json
@@ -60,6 +60,53 @@
         }
       }
     },
+
+    "/api/auth/sign": {
+      "summary": "Sign a farm in application",
+      "post": {
+        "summary": "Authenticate farmer in application",
+        "tags": ["authentication"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["email", "password"],
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "description": "Farmer's e-mail"
+                  },
+                  "password": {
+                    "type": "string",
+                    "description": "Farmer's password"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "A successful response with your token",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "string",
+                      "example": "Your bearer token"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/farmer": {
       "summary": "Farmer ground endpoint",
       "post": {
@@ -134,9 +181,33 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "string",
+                      "description": "Your farm id"
+                    },
                     "name": {
                       "type": "string",
-                      "example": "Your bearer token"
+                      "description": "Your farm name"
+                    },
+                    "email": {
+                      "type": "string",
+                      "description": "Your farm email"
+                    },
+                    "cpf": {
+                      "type": "string",
+                      "description": "Your cpf name"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "description": "created date of farm"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "description": "updated date of farm"
+                    },
+                    "deletedAt": {
+                      "type": "string",
+                      "description": "deleted date of farm"
                     }
                   }
                 }
@@ -146,26 +217,32 @@
         }
       }
     },
-    "/api/auth/sign": {
-      "summary": "Sign a farm in application",
+    "/api/farm": {
+      "summary": "Farm group endpoint",
       "post": {
-        "summary": "Authenticate farmer in application",
-        "tags": ["authentication"],
+        "summary": "Create a new farm",
+        "tags": ["farm"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["email", "password"],
+                "required": ["corporateName", "cnpj"],
                 "properties": {
-                  "email": {
-                    "type": "string",
-                    "description": "Farmer's e-mail"
+                  "corporateName": {
+                    "type": "string"
                   },
-                  "password": {
+                  "cnpj":  {
                     "type": "string",
-                    "description": "Farmer's password"
+                    "format": "cpf",
+                    "minLength": 18,
+                    "maxLength": 18
                   }
                 }
               }
@@ -174,15 +251,66 @@
         },
         "responses": {
           "201": {
-            "description": "A successful response with your token",
+            "description": "A successful response with message",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "token": {
+                    "message": {
                       "type": "string",
-                      "example": "Your bearer token"
+                      "example": "Farmer created"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "List all farmer of farmer",
+        "tags": ["farm"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "A successful response with your farmer data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "description": "Your farm id"
+                    },
+                    "name": {
+                      "type": "string",
+                      "description": "Your farm name"
+                    },
+                    "email": {
+                      "type": "string",
+                      "description": "Your farm email"
+                    },
+                    "cpf": {
+                      "type": "string",
+                      "description": "Your cpf name"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "description": "created date of farm"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "description": "updated date of farm"
+                    },
+                    "deletedAt": {
+                      "type": "string",
+                      "description": "deleted date of farm"
                     }
                   }
                 }
